# cbsw-unit-expect

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/expect/: boolean.unit.cpp  compare.unit.cpp  greater-than-or-equal.unit.cpp  greater-than.unit.cpp  include.unit.cpp  less-than-or-equal.unit.cpp  less-than.unit.cpp  main.cpp  null.unit.cpp  test.hpp
examples/extending-expect/: extend-root.unit.cpp  extend-to-be-boolean.unit.cpp  extend-to-be-null.unit.cpp  extend-to-be.unit.cpp  extend-to-equal.unit.cpp  extend-to-include.unit.cpp  extend-to.unit.cpp
include/: cbsw-unit-expect  cbsw-unit-expect.hpp
include/expect/: expect-binary-operator.hpp  expect-exception.hpp  expect-info.hpp  expect-logic.hpp  expect-macro.hpp  expect-root.hpp  expect-stream.hpp  expect-to-be-boolean.hpp  expect-to-be-greater-than-or-equal.hpp  expect-to-be-greater-than.hpp  expect-to-be-less-than-or-equal.hpp  expect-to-be-less-than.hpp  expect-to-be-null.hpp  expect-to-be-truthy.hpp  expect-to-be.hpp  expect-to-equal.hpp  expect-to.hpp  expect.hpp
include/expect/include/: expect-include-array-sfinae.hpp  expect-include-cstring-sfinae.hpp  expect-include-iterable-sfinae.hpp  expect-include-no-valid-include-exception.hpp  expect-include-not-found-exception.hpp  expect-include-string-sfinae.hpp  expect-to-include.hpp  iterable-traits.hpp  std-find-traits.hpp  std-search-traits.hpp
src/: CMakeLists.txt  cbsw-unit-expect-plugin.cpp  cbsw-unit-expect-plugin.hpp  expect-logic.cpp  expect.cpp  pch.hpp  version.hpp.in
